[package]
name = "debian"
version = "0.1.1"
authors = ["Markus Wanner <markus@bluegap.ch>"]
license = "MIT/Apache-2.0"
description = """
Helper library for everything related to Debian, like parsing changelog or
control files for packaging, comparing versions (the Debian way) or
interacting with apt.
"""
repository = "https://github.com/mwanner/rust-debian"

[dependencies]
chrono = "0.3.*"
log = "0.3"
time = "0.1"
tempdir = "0.3"

[lib]
name = "debian"
path = "src/lib.rs"
