[package]
name = "debian"
version = "0.1.1"
authors = ["Markus Wanner <markus@bluegap.ch>"]
license = "MIT/Apache-2.0"
description = """
Helper library for everything related to Debian, like parsing changelog or
control files for packaging, comparing versions (the Debian way) or
interacting with apt.
"""
repository = "https://github.com/mwanner/rust-debian"

[dependencies]
chrono = { version = "0.4" }
log = "0.4"
time = "0.3"
tempfile = "3"
serde = { version = "1.0.147", optional = true, features = [ "derive" ]}

[features]
serde = ["chrono/serde", "dep:serde" ]

[lib]
name = "debian"
path = "src/lib.rs"

[dev-dependencies]
serde_json = "1.0.89"
